css/style.css
* {
    scroll-behavior: smooth;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-size: 14px;
    font-weight: 300;
    color: rgb(65, 65, 65);
}

a {
    color: inherit;
}

a:hover {
    color: inherit;
}

.app_wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: flex-start;
    padding: 20px 35px;
    background: rgb(226, 226, 226);
}

.sidebar {
    width: 150px;
    margin-right: 25px;
    border-radius: 15px;
    background: rgb(28, 95, 218);
    padding: 35px 15px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    color: white;
}

.profile_minimum {
    width: 75px;
    height: 75px;
    overflow: hidden;
    border-radius: 50%;
}

img.cover {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.sign_out {
    font-size: 1.7rem;
    cursor: pointer;
}

.user_list {
    width: 250px;
    margin-right: 25px;
}

.search {
    display: flex;
    align-items: center;
    width: 100%;
    background: white;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    border-radius: 15px;
}

.search i {
    width: 40px;
    text-align: center;
    cursor: pointer;
}
.search input {
    width: calc(100% - 80px);
    padding: 10px;
}

.input_blank {
    background: none;
    outline: none;
    border: none;
}

.recent_users {
    background: white;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    border-radius: 15px;
    padding: 15px;
    max-height: 100%;
    overflow: hidden;
}

.profile_mini {
    width: 60px;
    height: 60px;
    border-radius: 50%;
}

.user {
    display: flex;
    align-items: center;
    padding-bottom: 10px;
    margin-bottom: 15px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    cursor: pointer;
}

.user:last-child {
    border: none;
}

.user .chatt_details {
    margin-left: 10px;
}
.bold {
    font-weight: 700;
}

.small_light {
    font-size: .8rem;
    color: rgb(182, 182, 182);
}

.chatt_box {
    background: white;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    border-radius: 15px;
    width: calc(100% - 450px);
    padding: 25px;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.chatt_header {
    padding-bottom: 12px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    position: relative;
    height: 75px;
}

.chatting_name {
    position: absolute;
    left: 50%;
    top: 0;
    transform: translateX(-50%);
    text-align: center;
}

.chatt_body {
    height: calc(100% - 135px);
    padding: 15px 0px;
}

.chatt_footer {
    height: 60px;
}

.message_type {
    display: flex;
    align-items: center;
    background: rgb(226, 226, 226);
    padding: 10px;
    border-radius: 15px;
    margin-right: 10px;
    width: calc(100% - 54px);
}

.btn-core {
    padding: 10px 15px;
    border-radius: 10px;
    background: rgb(28, 95, 218);
    color: white;
    outline: none;
    border: none;
}

.message_type .camera {
    width: 25px;
    text-align: center;
}

.message_type .input_blank {
    width: calc(100% - 25px);
}

.income, .outcome {
    max-width: 75%;
    min-width: 25%;
    margin-bottom: 10px;
}

.outcome {
    margin-left: 25%;
}

.income .message,
.outcome .message {
    background: rgb(226, 226, 226);
    border-radius: 10px;
    padding: 10px;
}

.outcome .message {
    background: rgb(28, 95, 218);
    color: white;
}

.chatt_body .timestamp {
    color: rgb(182, 182, 182);
    font-size: .75rem;
}

